[project]
name = "venture-diver-customer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[uvicorn]>=0.138.0",
    "gunicorn>=26.0.0",
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
