[project]
name = "venture-diver-customer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
